# Team02-PyRacer

./: .gitignore  .gitmodules  README.md  deploy.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-template.yml  epic-template.yml  story-template.yml  task-template.yml
.github/workflows/: clang-tidy-check.yml  deploy.yml  label-priority.yml  restrict-pr-to-main.yml
CarController/: CMakeLists.txt  deploy.sh
CarController/I2C/: CMakeLists.txt
CarController/I2C/include/: I2C.hpp  PCA9685.hpp
CarController/I2C/src/: I2C.cpp  PCA9685.cpp  main.cpp
CarController/include/: Motor.hpp  RaceCar.hpp  Servo.hpp
CarController/src/: Motor.cpp  RaceCar.cpp  Servo.cpp  main.cpp
CarController/tests/unit/: I2CTest.cpp  PCA9685Test.cpp  RaceCarTest.cpp
CarController/tests/unit/mocks/: MockI2C.h  MockPCA9685.h
MiddleWare/: CMakeLists.txt
MiddleWare/BatterySensor/: CMakeLists.txt
MiddleWare/BatterySensor/include/: BatterySensor.hpp
MiddleWare/BatterySensor/src/: BatterySensor.cpp
MiddleWare/Signals/: CMakeLists.txt
MiddleWare/Signals/include/: Signals.hpp
MiddleWare/Signals/src/: Signals.cpp
MiddleWare/src/: main.cpp
SharedMemory/: SharedMemory.hpp
XboxController/: CMakeLists.txt  deploy.sh
XboxController/include/: XboxController.hpp
XboxController/src/: XboxController.cpp  main.cpp  test
docs/guidelines/: GeneralGuidelines.md  clang-install-guidelines.md
docs/rules/: DevRule.json  MainRule.json
jetracer_app/: Readme.md
jetracer_app/scripts/: update_software.py
